+ features
* bugfixes
====================== 0.9.25 ======================
HIGHLIGHTS:
 + Complete overhaul of Continental supplies
 + Remove rubber duck
 + Rework team rankings
 + Tied teams now rank equally
 + Help button in main menu
 + 18 new hedgehog taunts
 + Many new Lua API features
 * Functionality of controllers restored
 * Fix at least 2 crashes
 * Fixed some awkward network bugs which caused games to come to a standstill
 * Many bugs related to the wrap world edge fixed (but not all)
 * Sudden Death always came exactly 1 turn later than planned

Game, gameplay:
 + Increase hedgehog limit to 64
 + Remove rubber duck
 + Shotgun, Desert Eagle, Sniper Rifle, Firepunch, Kamikaze, Whip and Baseball Bat can now hit air mines (and some other moving gears)
 + Shotgun shots can now pass through portals
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix sine gun dealing damage to attacker if shooting up
 * Hedgehog was able to drop more than 2 sticky mines if dropping first one from utility, then stop using utility
 * Fix Sudden Death starting in the second turn of a round rather than the first
 * Fix hammer and pickhammer not digging correctly at wrap world edge
 * Fix drill rocket exploding when digging at bounce/wrap world edge
 * Fix freezer ray not working through wrap world edge
 * Fix freezer ray going through bounce world edge
 * Fix freezer ray extending with low fuel usage when firing straight up/down while holding up/down key
 * Fix cake walking through bounce world edge
 * Fix cake walking through land when reaching wrap world edge
 * Laser sight now works properly through wrap world edge
 * Fix projectiles behaving incorrectly with land just behind the wrap world edge
 * Fix bee weapon becoming unusable when hitting attack key in mid-air
 * Fix hog sometimes getting stuck in land if roping very fast
 * Fix seduction not stopping if hog took damage before attack was complete